--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "material-photo-gallery": "^0.1.1",
     "vite": "^5.3.4"
+  },
+  "dependencies": {
+    "lightbox2": "^2.11.4"
   }
 }
